# zelda

./: .gitignore  CMakeLists.txt  README.md
assets/: envlight.csv  food.csv  game.lua  hero.csv  items.xml  light.frag  light.vert  log.csv  map.tmx  npc.csv  npc.xml  objects.csv  story.xml  tilemap.csv  tilemap.tsx
src/: CMakeLists.txt  ContactListener.h  VertexArray.h  action.cpp  action.h  combat.cpp  combat.h  common.h  components.h  config.h  graphic.cpp  graphic.h  input.cpp  input.h  main.cpp  resource.cpp  resource.h  scripts.cpp  scripts.h  sprite.cpp  sprite.h  tilemap.cpp  tilemap.h  utils.cpp  utils.h
src/ui/: DialogueUI.cpp  DialogueUI.h  MessageUI.cpp  MessageUI.h  PackUI.cpp  PackUI.h  UIState.h  style.h  ui.cpp  ui.h
tests/: test_ecs.cpp  test_loadSpriteSheet.cpp
